<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp">

        <TextView
            android:textColor="@color/colorPrimaryText"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_now" />

        <TextView
            android:textColor="@color/colorPrimaryText"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_login_to_continue_using_app" />

        <EditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/etEmailAddress"
            android:layout_marginTop="32dp"
            android:hint="@string/email"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <EditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:inputType="textPassword" />

        <Button
            android:background="@color/colorPrimary"
            android:id="@+id/btnLogIn"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in" />

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:text="@string/don_t_have_an_account_signup" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>