<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginIntro">

    <TextView
        android:id="@+id/LoginSubHeader"
        style="@style/TextAppearance.AppCompat.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/read_think_respond"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLoginHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/welcome_to_quizz_master"
        app:layout_constraintBottom_toTopOf="@+id/LoginSubHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.536"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginBottom="8dp"
        android:src="@drawable/undraw_questions_re_1fy7"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintBottom_toTopOf="@+id/textLoginHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/get_started"
        app:layout_constraintEnd_toEndOf="@+id/LoginSubHeader"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/LoginSubHeader"
        app:layout_constraintTop_toBottomOf="@+id/LoginSubHeader" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginBottom="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wave__1_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>